fixed menu wrap

--- a/src/app/google-map/google-map.component.scss
+++ b/src/app/google-map/google-map.component.scss
@@ -187,7 +187,6 @@ firebase-ui {
 .typeSelected, .typeUnselected {
     color: black;
     font-size:15px;
-    white-space:nowrap;
 }
 
 .typeUnselected {
